--- a/profils/type7.html
+++ b/profils/type7.html
@@ -22,17 +22,15 @@
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, Noto Sans, sans-serif;
       background:
-        radial-gradient(900px 450px at 18% 8%, rgba(96,165,250,.22), transparent 55%),
-        radial-gradient(900px 450px at 82% 10%, rgba(52,211,153,.16), transparent 55%),
-        radial-gradient(1100px 600px at 50% 115%, rgba(245,158,11,.10), transparent 60%),
+        radial-gradient(900px 450px at 18% 8%, rgba(96,165,250,.26), transparent 55%),
+        radial-gradient(900px 450px at 82% 10%, rgba(52,211,153,.18), transparent 55%),
+        radial-gradient(1100px 600px at 50% 115%, rgba(245,158,11,.15), transparent 60%), /* Ambre pour le 7 */
         var(--bg);
       color:var(--text);
       line-height:1.45;
     }
 
-    .wrap{max-width:1100px;margin:0 auto;padding:0 16px 92px}
-
-    /* --- MENU DE NAVIGATION (LE PONT) --- */
+    /* --- DEBUT MODIFICATIONS DU MENU (CALQUÉ SUR TYPE 1) --- */
     .type-nav {
       background: rgba(15, 23, 42, 0.95);
       border-bottom: 1px solid rgba(255,255,255,0.1);
@@ -44,20 +42,66 @@
     .nav-container {
       max-width: 1100px; margin: 0 auto; padding: 0 16px;
       display: flex; justify-content: space-between; align-items: center;
+      gap: 12px;
     }
-    .type-links { display: flex; gap: 5px; flex-wrap: wrap; justify-content: center; }
+    
+    .nav-pill {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 12px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.05);
+      color: rgba(238,242,255,.92);
+      font-weight: 800;
+      text-decoration: none;
+      font-size: 13px;
+      opacity: .95;
+      transition: .18s ease;
+      white-space: nowrap;
+    }
+    .nav-pill:hover {
+      border-color: rgba(96,165,250,.45);
+      background: rgba(96,165,250,.10);
+      color: #fff;
+      transform: translateY(-1px);
+    }
+
+    .type-center {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .type-label {
+      font-size: 12px;
+      font-weight: 900;
+      color: rgba(168,182,221,.95);
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(0,0,0,.18);
+      padding: 6px 10px;
+      border-radius: 999px;
+    }
+
+    .type-links { display: flex; gap: 6px; flex-wrap: wrap; justify-content: center; }
     .t-link {
       width: 32px; height: 32px; display: flex; align-items: center; justify-content: center;
-      border-radius: 50%; border: 1px solid rgba(255,255,255,0.1);
-      color: #94a3b8; font-weight: bold; text-decoration: none; transition: 0.2s;
+      border-radius: 50%; border: 1px solid rgba(255,255,255,0.12);
+      color: #94a3b8; font-weight: 900; text-decoration: none; transition: 0.2s;
       font-size: 13px; background: rgba(255,255,255,0.03);
     }
     .t-link:hover { border-color: var(--blue); color: #fff; background: rgba(96,165,250,0.1); }
     .t-link.active { 
-      background: var(--blue); color: #000; border-color: var(--blue); box-shadow: 0 0 10px rgba(96,165,250,0.3);
+      background: rgba(96,165,250,.95);
+      color: #061022;
+      border-color: rgba(96,165,250,.95);
+      box-shadow: 0 0 12px rgba(96,165,250,0.35);
     }
-    .nav-home, .nav-test { font-size: 13px; color: #eef2ff; text-decoration: none; font-weight: 600; opacity: 0.8; display:flex; align-items:center; gap:6px;}
-    .nav-home:hover, .nav-test:hover { opacity: 1; color: var(--blue); }
+    /* --- FIN MODIFICATIONS DU MENU --- */
+
+    .wrap{max-width:1100px;margin:0 auto;padding:0 16px 92px}
 
     .top{
       display:flex;
@@ -425,21 +469,24 @@
 
   <nav class="type-nav">
     <div class="nav-container">
-      <a href="../index.html" class="nav-home"><span>⌂</span> Accueil</a>
-      
-      <div class="type-links">
-        <a href="type1.html" class="t-link">1</a>
-        <a href="type2.html" class="t-link">2</a>
-        <a href="type3.html" class="t-link">3</a>
-        <a href="type4.html" class="t-link">4</a>
-        <a href="type5.html" class="t-link">5</a>
-        <a href="type6.html" class="t-link">6</a>
-        <a href="type7.html" class="t-link active">7</a>
-        <a href="type8.html" class="t-link">8</a>
-        <a href="type9.html" class="t-link">9</a>
+      <a href="../index.html" class="nav-pill"><span>⌂</span> Accueil</a>
+
+      <div class="type-center" aria-label="Choisir un type">
+        <span class="type-label">Choisir un type</span>
+        <div class="type-links">
+          <a href="type1.html" class="t-link">1</a>
+          <a href="type2.html" class="t-link">2</a>
+          <a href="type3.html" class="t-link">3</a>
+          <a href="type4.html" class="t-link">4</a>
+          <a href="type5.html" class="t-link">5</a>
+          <a href="type6.html" class="t-link">6</a>
+          <a href="type7.html" class="t-link active" aria-current="page">7</a>
+          <a href="type8.html" class="t-link">8</a>
+          <a href="type9.html" class="t-link">9</a>
+        </div>
       </div>
 
-      <a href="../test-enneagramme-sans-indice.html" class="nav-test">Faire le Test →</a>
+      <a href="../test-enneagramme-sans-indice.html" class="nav-pill">Faire le test →</a>
     </div>
   </nav>
 
@@ -912,7 +959,7 @@ Apprendre à devenir plus réaliste, mener ses projets jusqu'à leur terme sans 
       <div class="barBtns">
         <a class="btn primary" id="backToTest" href="../test-enneagramme-sans-indice.html">Retour au test</a>
         <a class="btn" id="backToHome" href="../index.html">Retour accueil</a>
-        <a href="type8.html" class="btn" id="nextBtn">Suivant</a>
+        <button class="btn" id="nextBtn" type="button">Suivant</button>
       </div>
       <div class="barInfo" id="barInfo">Type 7</div>
     </div>
@@ -1081,13 +1128,37 @@ Analogie : Le Type 7 est comme un explorateur fuyant l'ennui : le Sept Survie ex
       if(!t) return false;
 
       const noColonHeadings = new Set([
-        "Centre d'intelligence", "Orientation", "Compulsion", "Passion et Fixation", "Mécanisme de défense", "Peurs et Désirs fondamentaux", "Le Schéma de l'enfance", "Les Sous-types d'Ailes", "Les trois sous-types instinctifs", "Profil professionnel", "Style de management", "Style de communication", "Points de vigilance", "Réaction au Stress (Désintégration)", "Chemin d'Intégration (Croissance)", "Points d'amélioration à travailler", "Pratiques suggérées et Attitudes de Guérison", "Intégration (Idée supérieure et Vertu)", "L'Idée sacrée", "L'Illusion Spécifique", "La Difficulté Spécifique", "La Réaction Spécifique", "Le Noyau de la Fixation", "La Confiance Fondamentale", "La Lumière du jour Vivante", "L'Idée Sacrée comme Psycho-catalyseur", "Rétablir la Confiance Fondamentale", "L'Abandon", "La Poussée Optimisante", "Signaux d'Alerte", "Les Défis de croissance", "Hiérarchie des centres"
+        "Les Sous-types d'Ailes",
+        "Les trois sous-types instinctifs",
+        "Profil professionnel",
+        "Style de management",
+        "Style de communication",
+        "Points de vigilance",
+        "Réaction au Stress (Désintégration)",
+        "Chemin d'Intégration (Croissance)",
+        "Points d'amélioration à travailler",
+        "Pratiques suggérées et Attitudes de Guérison",
+        "Intégration (Idée supérieure et Vertu)",
+        "L'Idée sacrée",
+        "L'Illusion Spécifique",
+        "La Difficulté Spécifique",
+        "La Réaction Spécifique",
+        "Le Noyau de la Fixation",
+        "La Confiance Fondamentale",
+        "La Lumière du jour Vivante",
+        "L'Idée Sacrée comme Psycho-catalyseur",
+        "Rétablir la Confiance Fondamentale",
+        "L'Abandon",
+        "La Poussée Optimisante",
+        "Signaux d'Alerte",
+        "Les Défis de croissance",
+        "Hiérarchie des centres"
       ]);
       if(noColonHeadings.has(t)) return true;
 
       if(/:\s*$/.test(t)) return true;
 
-      if(t === "Hiérarchie des centres :" || t === "Passion et Fixation :") return true;
+      if(t === "Hiérarchie des centres :" || t === "Passion et Fixation :" || t === "Mécanisme de défense :" || t === "Peurs et Désirs fondamentaux :" || t === "Le Schéma de l'enfance :" || t === "L'Idée sacrée :" || t === "L'Illusion Spécifique:" || t === "Le Noyau de la Fixation:" ) return true;
 
       return false;
     }
@@ -1097,22 +1168,58 @@ Analogie : Le Type 7 est comme un explorateur fuyant l'ennui : le Sept Survie ex
       let html = '';
       let listMode = null;
 
-      const closeList = ()=>{ if(listMode){ html += `</ul>`; listMode = null; } };
-      const openList = (mode)=>{ if(listMode === mode) return; closeList(); listMode = mode; html += `<ul class="${mode}">`; };
+      const closeList = ()=>{
+        if(listMode){ html += `</ul>`; listMode = null; }
+      };
 
-      const pushP = (line)=>{ closeList(); html += `<p>${escapeHTML(line)}</p>`; };
-      const pushGap = ()=>{ closeList(); html += `<div class="gap"></div>`; };
-      const pushSubhead = (title)=>{ closeList(); html += `<div class="subhead"><span class="t">${escapeHTML(title)}</span></div>`; };
-      const pushLabelRow = (k, v)=>{ closeList(); html += `<div class="labelRow"><span class="label">${escapeHTML(k)}</span><span class="value">${escapeHTML(v)}</span></div>`; };
+      const openList = (mode)=>{
+        if(listMode === mode) return;
+        closeList();
+        listMode = mode;
+        html += `<ul class="${mode}">`;
+      };
+
+      const pushP = (line)=>{
+        closeList();
+        html += `<p>${escapeHTML(line)}</p>`;
+      };
+
+      const pushGap = ()=>{
+        closeList();
+        html += `<div class="gap"></div>`;
+      };
+
+      const pushSubhead = (title)=>{
+        closeList();
+        html += `<div class="subhead"><span class="t">${escapeHTML(title)}</span></div>`;
+      };
+
+      const pushLabelRow = (k, v)=>{
+        closeList();
+        html += `<div class="labelRow"><span class="label">${escapeHTML(k)}</span><span class="value">${escapeHTML(v)}</span></div>`;
+      };
+
       const pushLI = (mode, k, v, keepColon=true)=>{
         openList(mode);
-        if(v === null){ html += `<li>${escapeHTML(k)}</li>`; return; }
+        if(v === null){
+          html += `<li>${escapeHTML(k)}</li>`;
+          return;
+        }
         const label = keepColon ? `${k}` : k;
         html += `<li><span class="k">${escapeHTML(label)}</span> ${escapeHTML(v)}</li>`;
       };
 
-      for(const line of lines){
-        if(line.trim()===''){ pushGap(); continue; }
+      for(let i=0;i<lines.length;i++){
+        const line = lines[i];
+
+        if(line.trim()===''){
+          pushGap();
+          continue;
+        }
+
+        if(looksLikeDuplicateSectionTitle(line)){
+          continue;
+        }
 
         if(isSubhead(line)){
           const cleaned = line.trim().replace(/:\s*$/,'');
@@ -1140,7 +1247,7 @@ Analogie : Le Type 7 est comme un explorateur fuyant l'ennui : le Sept Survie ex
             continue;
           }
 
-          if(/^Peur de base$/i.test(key) || /^Désir de base$/i.test(key) || /^Message du Surmoi/i.test(key)){
+          if(/^Peur de base$/i.test(key) || /^Désir de base$/i.test(key) || /^Message du Surmoi$/i.test(key)){
             pushLI('arrow', `${key} :`, val, false);
             continue;
           }
