--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
           <div class="ctaRow">
             <a id="openFull" class="btn" href="profils/type1.html" aria-disabled="true">Voir la fiche complète</a>
-            <a id="openProfil" class="btn" href="test-enneagramme-sans-indice.html" style="border-color:#8bd3ff;color:#8bd3ff;">Passer le test</a>
+            <a id="openProfil" class="btn" href="test-enneagramme-sans-indice.html">Passer le test</a>
             <a class="btn" href="explore.html">Explorer l'Ennéagramme</a>
           </div>
         </div>
