--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <circle class="ring" cx="350" cy="350" r="270"></circle>
             <circle class="innerRing" cx="350" cy="350" r="210"></circle>
 
+            <text x="350" y="352" text-anchor="middle" dominant-baseline="middle"
+                  style="font-family: ui-serif, Georgia, 'Times New Roman', serif; font-weight: 800; letter-spacing: 1.5px; font-size: 26px; fill: rgba(255,255,255,.22); text-transform: uppercase;">
+              Ennéagramme
+            </text>
+
             <g id="staticBg" class="staticBg">
               <path class="hex" d="" id="hexPath"></path>
               <path class="tri" d="" id="triPath"></path>
